--- a/2019/【译】D3入门.md
+++ b/2019/【译】D3入门.md
@@ -2,11 +2,13 @@
 【译】D3入门
 ---
 
-原文标题：【Getting Started with D3】
-原文链接：[http://thinkingonthinking.com/Getting-Started-With-D3/](http://thinkingonthinking.com/Getting-Started-With-D3/)
+> 原文标题：【Getting Started with D3】
+
+> 原文链接：[http://thinkingonthinking.com/Getting-Started-With-D3/](http://thinkingonthinking.com/Getting-Started-With-D3/)
 
 *译注：本文使用D3的v3版本，当前最新版本v5*
 
+---
 
 可视化是理解想法和玩转数据的好工具。来自 Ideo 的 Tim Brown 在[这篇文章](http://designthinking.ideo.com/?p=1294)中写道
 
@@ -58,7 +60,7 @@ vis.text("The Graph")
 
 但是，`D3` 与 `jQuery` 不同，因为它允许根据 `“数据”` `“布局”` 图形结构。这意味着，[选择的DOM节点](http://bost.ocks.org/mike/selection/)提供了许多不同的功能，而不是 `jQuery` 的相同选择。
 
-一旦选择了DOM节点，就可以将数据 `“连接”` 到DOM节点！这是通过 `[data()](https://github.com/mbostock/d3/wiki/Selections#wiki-data)` 命令完成的。数据到节点的映射可能会感觉有点神奇，因为这会基于声明性语法[添加关系](http://bost.ocks.org/mike/join/)。如果你最终有些困惑（就像我一样），你可以在[这里](http://knowledgestockpile.blogspot.de/2012/01/understanding-selectall-data-enter.html)阅读一些额外的解释
+一旦选择了DOM节点，就可以将数据 `“连接”` 到DOM节点！这是通过 [`data()`](https://github.com/mbostock/d3/wiki/Selections#wiki-data) 命令完成的。数据到节点的映射可能会感觉有点神奇，因为这会基于声明性语法[添加关系](http://bost.ocks.org/mike/join/)。如果你最终有些困惑（就像我一样），你可以在[这里](http://knowledgestockpile.blogspot.de/2012/01/understanding-selectall-data-enter.html)阅读一些额外的解释
 
 要进行第一次映射，我们首先定义节点：
 
@@ -97,6 +99,7 @@ vis.selectAll("circle .nodes")
 ```
 
 这个结果应该类似于：
+
 ![](http://thinkingonthinking.com/static/images/3_circles.png)
 
 由于圆圈已绘制好了，您现在可以添加和删除数据，图表将自动更新：[尝试此codepen](http://codepen.io/mulderp/pen/aDrxq)
@@ -134,11 +137,11 @@ vis.selectAll(".line")
 对于小例子，使用节点和边缘手动设置图形可能会很有趣。但是，如果您经常需要设置图形，或者节点数和边数增加，也可以使用算法设置图形。这是[力布局](http://en.wikipedia.org/wiki/Force-directed_graph_drawing)有用的地方。
 
 有了这个，你可以像[这个例子](http://codepen.io/mulderp/full/KGFvx)一样设置一个图形：
+
 ![](http://thinkingonthinking.com/static/images/graph_levelgraph.png)
 
 `D3` 也支持力布局算法，[这里](http://www.d3noob.org/2013/03/what-is-force-layout-diagram-in-d3js.html)是一个很好的起点。另一种选择可能是使用 `D3插件`，例如[图形插件](https://github.com/d3/d3-plugins/tree/master/graph)。
 
-What are your experiences with D3 for graphs and the different approaches? Leave feedback here, or at (hackernews)[https://news.ycombinator.com/item?id=7210162].
 如果你有在图表上使用 `D3` 的不同方法的经验？请在[hackernews](https://news.ycombinator.com/item?id=7210162)留下反馈。
 
 ## 资源
